@@ -1,0 +1,2 @@
+prog: relative1
+vgopts: -q
